[package]
name = "boot-me-maybe-os"
version = "0.1.0"
edition = "2024"

[dependencies]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[[bin]]
name = "boot-me-maybe-os"
test = false
bench = false
